Changed dimensions of photos. Added score prop to NavBar. Added scores to states

--- a/clicky_game/src/components/NavBar/style.css
+++ b/clicky_game/src/components/NavBar/style.css
@@ -1,8 +1,12 @@
 .HPLogo{
-    width: 435px;
+    width: 426px;
     height: 140px;
 }
 
 .NavDim{
     height: 140px;
+}
+
+.navbar-fixed{
+    margin-bottom: 60px;
 }
