Added background song component. Revised Click events to array.map vs for loop. added separate correct guess vs incorrect guess handlers

--- a/clicky_game/src/index.css
+++ b/clicky_game/src/index.css
@@ -3,7 +3,7 @@ body {
   font-family:"HarryPotterFont";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: black;
+  background-color: #303030;
 }
 
 code {
